Fix unit tests for 16-bit Subseconds Sys_Time
These unit tests made too strong of assumptions on the size of the
subseconds field. Now that Adamant supports either 16-bit or 32-bit
subseconds, the unit tests have been updated to pass in either case.

--- a/src/components/command_sequencer/test/test_component/test_component.commands.yaml
+++ b/src/components/command_sequencer/test/test_component/test_component.commands.yaml
@@ -5,7 +5,7 @@ commands:
     description: Command 1.
   - name: Command_2
     description: Command 2.
-    arg_type: Sys_Time.T
+    arg_type: Sys_Time_32.T
   - name: Command_3
     description: Command 3.
     arg_type: Packed_U32.T
