Fix spelling/grammar in command_sequencer test files
- seq_types.ads: 'stored a byte_array' -> 'stored as a byte_array', '64 bits' -> '64 bytes'
- tests .ads/.yaml: duplicate 'tests tests' -> 'tests', 'commands send' -> 'commands sent'
- tests .adb: 'Ok n ext' -> 'Ok next', 'Expect acommand' -> 'Expect a command'
- tester .ads/.adb: 'response of subsequence' -> 'response or subsequence'
- bad_float_21.txt: 'comupation' -> 'computation'

--- a/src/components/command_sequencer/test/command_sequencer.tests.yaml
+++ b/src/components/command_sequencer/test/command_sequencer.tests.yaml
@@ -18,7 +18,7 @@ tests:
   - name: Test_Sequence_Telemetry_Compare_Error
     description: This unit test tests loading and running a sequence that executes a conditional on a data product that is malformed.
   - name: Test_Sequence_Telemetry_Compare_Corner_Cases
-    description: This unit test tests tests a few corner cases related to telemetry comparisons and makes sure they behave as intended.
+    description: This unit test tests a few corner cases related to telemetry comparisons and makes sure they behave as intended.
   - name: Test_Sequence_Spawn_Invalid_Engine
     description: This unit test tests loading and running a sequence that loads a sequence into another engine that does not exist.
   - name: Test_Sequence_Spawn_Unavailable_Engine
