--- a/src/components/command_sequencer/types/engine_error_type.record.yaml
+++ b/src/components/command_sequencer/types/engine_error_type.record.yaml
@@ -1,5 +1,5 @@
 ---
-description: A packed record which holds a summary of the state for a particular sequence engine.
+description: A packed record which holds error information for a particular sequence engine.
 fields:
   - name: Engine_Id
     description: The sequence engine identifier.
