--- a/src/components/command_sequencer/types/64bit/sequence_length_error.record.yaml
+++ b/src/components/command_sequencer/types/64bit/sequence_length_error.record.yaml
@@ -1,5 +1,5 @@
 ---
-description: This is a packed record that holds information invalid sequence length.
+description: This is a packed record that holds information about an invalid sequence length.
 fields:
   - name: Load
     description: The sequence load info.
