--- a/src/components/sequence_store/types/32bit/invalid_sequence_length_info.record.yaml
+++ b/src/components/sequence_store/types/32bit/invalid_sequence_length_info.record.yaml
@@ -1,5 +1,5 @@
 ---
-description: This is a packed record that holds information about a sequence to store with invalid Length.
+description: This is a packed record that holds information about a sequence to store with invalid length.
 fields:
   - name: Store
     description: The to-store info.
