--- a/src/components/sequence_store/sequence_store.component.yaml
+++ b/src/components/sequence_store/sequence_store.component.yaml
@@ -13,14 +13,14 @@ preamble: |
 init:
   description: The component is initialized by providing the memory regions (slots) it is to manage.
   parameters:
-    - name: sequence_Slots
+    - name: Sequence_Slots
       type: Sequence_Slot_Array_Access
       not_null: true
       description: "A list of memory regions. Each represents a slot to hold a single sequence of equal or smaller size (including header). This list will be copied into the component at initialization onto a heap allocated memory. The memory regions must not overlap in any way, must be large enough to at least hold a sequence header, and the list must not be empty. These properties will be enforced by the component via assertions when Init is called."
-    - name: check_Slots_At_Startup
+    - name: Check_Slots_At_Startup
       type: Boolean
       description: "If True, then check the validity of the sequences in all slots by computing CRCs over them at startup."
-    - name: dump_Slot_Summary_At_Startup
+    - name: Dump_Slot_Summary_At_Startup
       type: Boolean
       description: "If True, then the slot summaries will be dumped at startup."
 connectors:
