Fix Low review item: Fix typo 'my' to 'may' in Seq_Data_Type description

--- a/src/components/command_sequencer/seq/types/seq_enums.enums.yaml
+++ b/src/components/command_sequencer/seq/types/seq_enums.enums.yaml
@@ -382,7 +382,7 @@ enums:
         value: 3
         description: An error print statement.
   - name: Seq_Data_Type
-    description: This enum names the data types from Seq. This was implemented for printing variables. In C Seq these were represented with chars, so the values my seem random, they are not.
+    description: This enum names the data types from Seq. This was implemented for printing variables. In C Seq these were represented with chars, so the values may seem random, they are not.
     literals:
       - name: Discrete
         value: 68
